# dum-dum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Card.cpp  Card.h  Cards.cpp  Cards.h  Game.cpp  Game.h  Hand.h  Main.cpp  Panic.cpp  Panic.h  State.cpp  State.h  abs_game_model.cpp  abs_game_model.h  abs_solver.cpp  abs_solver.h  card_model.cpp  card_model.h  eval.cpp  eval.h  fast_tricks.cpp  fast_tricks.h  game_mini_solver.cpp  game_mini_solver.h  game_model.cpp  game_model.h  game_solver.cpp  game_solver.h  main.cpp  mini_solver.cpp  mini_solver.h  parser.cpp  parser.h  play_order.cpp  play_order.h  random.cpp  random.h  small_ints.h  solver.cpp  (+3 more)
src/weights/: b0.txt  b1.txt  b2.txt  linear0_b.txt  linear0_b_fp16.txt  linear0_w.txt  linear0_w_fp16.txt  linear1_b.txt  linear1_b_fp16.txt  linear1_w.txt  linear1_w_fp16.txt  linear2_b.txt  linear2_b_fp16.txt  linear2_w.txt  linear2_w_fp16.txt  w0.txt  w1.txt  w2.txt
test/: CMakeLists.txt  Cards_test.cpp  Game_test.cpp  State_test.cpp  abs_game_model_test.cpp  abs_solver_test.cpp  benchmark.cpp  card_model_test.cpp  eval_test.cpp  fast_tricks_test.cpp  game_mini_solver_test.cpp  game_model_test.cpp  game_solver_test.cpp  mini_solver_test.cpp  play_order_test.cpp  random_test.cpp  solver.cpp  solver_test.cpp  test_util.h  tpn_table_test.cpp
